Fix: espacement UserCreate, SearchBar visible en scroll sur mobile

--- a/src/pages/admin/UserCreate.scss
+++ b/src/pages/admin/UserCreate.scss
@@ -45,7 +45,7 @@
 // Section formulaire
 // -----------------------------------------------------------------------------
 .user-create-section {
-    padding: 2rem 0 5rem;
+    padding: 2rem 0 2rem;
 }
 
 .user-create-form-wrapper {
