--- a/src/pages/menu/MenuList.scss
+++ b/src/pages/menu/MenuList.scss
@@ -35,24 +35,6 @@
 
     main {
         padding-top: 90px;
-
-        @include mobile {
-            display: flex;
-            flex-direction: column;
-
-            .menu-page {
-                order: -1;
-            }
-        }
-
-        @include tablet {
-            display: flex;
-            flex-direction: column;
-
-            .menu-page {
-                order: -1;
-            }
-        }
     }
 }
 
